--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ font-family: 'Work Sans', sans-serif; */
 body {
   width: 100%;
   max-width: 1440px;
+  margin: auto;
 }
 
 .main-container {
@@ -38,10 +39,12 @@ nav {
   line-height: 27px;
   color: #ffffff;
   text-transform: capitalize;
+  text-decoration: none;
 }
 
 .nav-title:hover {
   color: #ffb742;
+  cursor: pointer;
 }
 
 .header-btn {
@@ -57,6 +60,11 @@ nav {
   line-height: 30px;
   color: #212529;
   border: none;
+}
+
+.header-btn:hover {
+  cursor: pointer;
+  background: #f1b85c;
 }
 
 h2 {
@@ -140,6 +148,7 @@ h3 {
     rgba(255, 123, 66, 0.76) 99.33%
   );
   color: #212529;
+  cursor: pointer;
 }
 
 .little-text {
@@ -171,7 +180,7 @@ h3 {
 .dark-btn-style {
   width: 148px;
   height: 42px;
-  background: rgba(255, 255, 255, 0.08);
+  background: rgba(170, 139, 139, 0.08);
   border-radius: 50px;
   font-family: "Poppins";
   font-style: normal;
@@ -181,6 +190,11 @@ h3 {
   text-transform: uppercase;
   color: #ffb742;
   border: none;
+}
+
+.dark-btn-style:hover {
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0.08);
 }
 
 .title-style {
@@ -218,6 +232,11 @@ h3 {
   border: none;
 }
 
+.btn-hire:hover {
+  cursor: pointer;
+  background: #f1b85c;
+}
+
 .scills {
   display: flex;
   width: 90%;
@@ -232,7 +251,7 @@ h3 {
 .scills-table {
   display: flex;
   justify-content: start;
-  width: 43%;
+  width: 45%;
   flex-wrap: wrap;
   height: 180px;
 }
@@ -246,13 +265,16 @@ h3 {
   align-items: center;
   display: flex;
   justify-content: center;
+  border: 1px solid #383e45;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
 }
 
 .scills-box:hover {
   background: rgba(255, 183, 66, 0.5);
   border: 1px solid #000000;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .my-works {
@@ -292,16 +314,18 @@ h3 {
   background: #ffb742;
   border-radius: 3px;
   color: #212529;
+  cursor: pointer;
 }
 
 .cards {
   padding-top: 55px;
   padding-bottom: 141px;
-  width: 95%;
+  width: 94%;
   margin: auto;
   display: flex;
   justify-content: space-between;
-  height: 818px;
+  max-height: 818px;
+  height: 100%;
 }
 
 .cards div {
@@ -310,6 +334,15 @@ h3 {
   justify-content: space-between;
 }
 
+.cards div img {
+  max-width: 390px;
+  width: 100%;
+  padding-bottom: 5%;
+}
+.little-img {
+  max-height: 292.68px;
+  height: 100%;
+}
 .testimonials-btn {
   width: 192px;
   height: 42px;
@@ -327,11 +360,20 @@ h3 {
 
 .feedback-card {
   width: 32%;
-  height: 455.11px;
+  min-height: 455.11px;
+  height: 100%;
   background: #ffffff;
   border-radius: 7.92699px;
   padding: 51px 3%;
   box-sizing: border-box;
+}
+
+.feed-person img {
+  max-width: 72px;
+  max-height: 73.88px;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 
 .stars {
@@ -425,6 +467,7 @@ footer {
   font-size: 21.5865px;
   line-height: 32px;
   color: #f5fbf2;
+  margin-bottom: 13px;
 }
 
 .footer-subtitle {
@@ -435,8 +478,22 @@ footer {
   line-height: 36px;
   color: #7b7b7b;
   width: 70%;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.footer-subtitle:hover {
+.footer-link {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17.9888px;
+  line-height: 36px;
+  color: #7b7b7b;
+  text-decoration: none;
+  transition: all 200ms ease-in-out;
+}
+
+.footer-link:hover {
   color: #ffb742;
 }
