--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ nav {
   color: #ffffff;
   text-transform: capitalize;
   text-decoration: none;
+  transition: all 200ms ease-in-out;
 }
 
 .nav-title:hover {
@@ -55,6 +56,7 @@ nav {
   line-height: 30px;
   color: #212529;
   border: none;
+  transition: all 200ms ease-in-out;
 }
 
 .header-btn:hover {
@@ -185,6 +187,7 @@ h3 {
   text-transform: uppercase;
   color: #ffb742;
   border: none;
+  transition: all 200ms ease-in-out;
 }
 
 .dark-btn-style:hover {
@@ -225,6 +228,7 @@ h3 {
   line-height: 30px;
   color: #212529;
   border: none;
+  transition: all 200ms ease-in-out;
 }
 
 .btn-hire:hover {
@@ -263,6 +267,7 @@ h3 {
   border: 1px solid #383e45;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+  transition: all 200ms ease-in-out;
 }
 
 .scills-box:hover {
@@ -303,6 +308,7 @@ h3 {
   line-height: 30px;
   color: #ffffff;
   padding: 0 2%;
+  transition: all 200ms ease-in-out;
 }
 
 .works-menu div:hover {
